# Next-Gen-O11y-Onboarding-Platform

./: .env.example  .gitignore  LICENSE  Makefile  README.md  RECREATE_PROMPT.md  RECREATE_PROMPT_V2.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_align_schema.py  003_coverage_and_leadership.py  004_integration_configs.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/engine/: __init__.py  capacity_engine.py  coverage_engine.py  governance_engine.py  models.py
backend/app/jobs/: __init__.py  scheduler.py
backend/app/mcp/: __init__.py  base_client.py  cmdb_client.py  confluence_client.py  grafana_client.py  jira_client.py  servicenow_client.py
backend/app/models/: __init__.py  application.py  artifact.py  audit.py  base.py  capacity.py  coverage.py  integration.py  onboarding.py  similarity.py  telemetry.py
backend/app/repositories/: __init__.py  application_repo.py  audit_repo.py  onboarding_repo.py
backend/app/schemas/: __init__.py  artifact.py  capacity.py  capacity_stack.py  cmdb.py  common.py  coverage.py  governance.py  grafana_usage.py  integration.py  onboarding.py  similarity.py  synthetics.py
backend/app/services/: artifact_service.py  capacity_service.py  capacity_stack_service.py  cmdb_sync_service.py  governance_service.py  integration_runner.py  integration_service.py  notification_service.py  (+2 more)
backend/scripts/: seed_demo_data.py
backend/tests/: conftest.py
(+173 files in other folders)
